--- a/cv_namasaya.sttnf.html
+++ b/cv_namasaya.sttnf.html
@@ -8,7 +8,7 @@
     <table>
       <tr>
         <th>
-          <img src="images/nf-logo.png" alt="Logo NF">
+          <img src="https://akademiksttnf.files.wordpress.com/2018/01/cropped-ti.png?w=240" alt="Logo NF">
         </th>
         <th><h2>Biodata Mahasiswa</h2></th>
       </tr>
